tests/typechecker/fail/008-ascription.hyg
(((42: test123) + 35): int)